--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
         # Get the correct branch of benchopt
         user=${BENCHOPT_BRANCH%:*}
         branch=${BENCHOPT_BRANCH##*:}
-        pip install -U git+https://github.com/$user/benchopt@$branch
+        pip install -U git+https://github.com/inria-thoth/benchopt@$branch
 
     - name: Test
       run: |
