--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - linting
   create:
     tags:
       - '**'
@@ -40,7 +41,7 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2
       with:
         activate-environment: ${{ env.CONDA_ENV }}
-        python-version: 3.8
+        python-version: 3.10
         # Use miniforge to only get conda-forge as default channel.
         miniforge-version: latest
 
@@ -75,10 +76,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.10
 
     - name: Lint with flake8
       run: |
